added to the project and sync js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,14 @@
 {
     "cSpell.words": [
+        "backgr",
+        "Colour",
         "guessno",
         "herhe",
         "innertext",
         "preguess",
         "radha",
-        "setattribute"
+        "randomclr",
+        "setattribute",
+        "strtbutton"
     ]
 }
