--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,10 +5,12 @@
         "guessno",
         "herhe",
         "innertext",
+        "nava",
         "preguess",
         "radha",
         "randomclr",
         "setattribute",
-        "strtbutton"
+        "strtbutton",
+        "vada"
     ]
 }
