Add Local Storage demo; show date in task manager
Add a new Local Storage example (13_Local_Storage/Local_Storage.html + script.js) that lets you add/remove items and persists them in localStorage under the 'data' key. Update the task-manager UI and script: give the H1 a .tasks class and append today's date to the header, small JS cleanup around saving/loading tasks and ensuring loaded tasks set their dropdown value and are appended to the correct column. Also update .vscode/settings.json to include 'lastelement' in the workspace settings.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "guessno",
         "herhe",
         "innertext",
+        "lastelement",
         "nava",
         "preguess",
         "radha",
